Fix alignment on mobile nav

--- a/src/assets/scss/style.css
+++ b/src/assets/scss/style.css
@@ -3261,7 +3261,7 @@ color: #fff;
 padding: 0px;
 }	
 ul.rightnav li{
-margin: 0 15px;
+margin: 0 7px;
 }	
 ul.rightnav{
 margin: 0;
